Bug 106853 - crash after selecting variable
Summary: crash after selecting variable
Status: RESOLVED FIXED
Alias: None
Product: kcron
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Gary Meyer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-06-05 20:15 UTC by Martin Tentij
Modified: 2006-01-14 17:41 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Tentij 2005-06-05 20:15:43 UTC
Version:            (using KDE KDE 3.4.0)
Installed from:    SuSE RPMs
OS:                Linux

After crash pop-up illegal operation
11 (SIGSEGV)

Back trace 

(no debugging symbols found)
Using host libthread_db library "/lib/tls/libthread_db.so.1".
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
[KCrash handler]
#7  0x0805f0fb in ?? ()
#8  0x0817d5d0 in ?? ()
#9  0x00000000 in ?? ()
#10 0x00000000 in ?? ()
#11 0x00000000 in ?? ()
#12 0x00000000 in ?? ()
#13 0x411718d4 in ?? () from /usr/lib/qt3/lib/libqt-mt.so.3
#14 0xbfffe088 in ?? ()
#15 0x081d6c48 in ?? ()
#16 0x0000541b in ?? ()
#17 0x415b25a9 in ioctl () from /lib/tls/libc.so.6
#18 0x4131c070 in _X11TransGetMyAddr () from /usr/X11R6/lib/libX11.so.6
#19 0x0806158a in ?? ()
#20 0x0817d5d0 in ?? ()
#21 0x081ce578 in ?? ()
#22 0xbfffe148 in ?? ()
#23 0x40008002 in _dl_rtld_di_serinfo () from /lib/ld-linux.so.2
#24 0x40d15e7e in QObject::activate_signal ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#25 0x4107da83 in QListView::selectionChanged ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#26 0x40dff782 in QListView::setCurrentItem ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#27 0x40e0264e in QListView::contentsMousePressEventEx ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#28 0x40e03174 in QListView::contentsMousePressEvent ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#29 0x40e32f58 in QScrollView::viewportMousePressEvent ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#30 0x40e342c8 in QScrollView::eventFilter ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#31 0x40e031e8 in QListView::eventFilter () from /usr/lib/qt3/lib/libqt-mt.so.3
#32 0x40d1537e in QObject::activate_filters ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#33 0x40d15460 in QObject::event () from /usr/lib/qt3/lib/libqt-mt.so.3
#34 0x40d4bebf in QWidget::event () from /usr/lib/qt3/lib/libqt-mt.so.3
#35 0x40cb2d5f in QApplication::internalNotify ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#36 0x40cb5266 in QApplication::notify () from /usr/lib/qt3/lib/libqt-mt.so.3
#37 0x4093e6b1 in KApplication::notify () from /opt/kde3/lib/libkdecore.so.4
#38 0x40c5028e in QETWidget::translateMouseEvent ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#39 0x40c4f146 in QApplication::x11ProcessEvent ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#40 0x40c5fc38 in QEventLoop::processEvents ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#41 0x40ccae51 in QEventLoop::enterLoop () from /usr/lib/qt3/lib/libqt-mt.so.3
#42 0x40ccac96 in QEventLoop::exec () from /usr/lib/qt3/lib/libqt-mt.so.3
#43 0x40cb494f in QApplication::exec () from /usr/lib/qt3/lib/libqt-mt.so.3
#44 0x0807400e in ?? ()
#45 0xbffff020 in ?? ()
#46 0x00000001 in ?? ()
#47 0x00000001 in ?? ()
#48 0x00000000 in ?? ()
#49 0x00000000 in ?? ()
#50 0x00000001 in ?? ()
#51 0x0807efe6 in vtable for QDragMoveEvent ()
#52 0x00000000 in ?? ()
#53 0x00000000 in ?? ()
#54 0x0807efd2 in vtable for QDragMoveEvent ()
#55 0x00000003 in ?? ()
#56 0x00000015 in ?? ()
#57 0x41614ff4 in ?? () from /lib/tls/libc.so.6
#58 0x41616800 in __malloc_initialize_hook () from /lib/tls/libc.so.6
#59 0x08082008 in ?? ()
#60 0x414cba10 in ?? () from /usr/lib/libstdc++.so.5
#61 0x409cfa28 in vtable for KApplication () from /opt/kde3/lib/libkdecore.so.4
#62 0x0807df60 in vtable for QDragMoveEvent ()
#63 0x0808cdc0 in ?? ()
#64 0x00000000 in ?? ()
#65 0x0811f760 in ?? ()
#66 0x08164278 in ?? ()
#67 0x08163370 in ?? ()
#68 0x08165258 in ?? ()
#69 0x00000000 in ?? ()
#70 0x00000000 in ?? ()
#71 0x00000001 in ?? ()
#72 0x0808be88 in ?? ()
#73 0x0808ac00 in ?? ()
#74 0x00000000 in ?? ()
#75 0x0816b648 in ?? ()
#76 0x08125dd8 in ?? ()
#77 0x08127968 in ?? ()
#78 0x41171800 in ?? () from /usr/lib/qt3/lib/libqt-mt.so.3
#79 0x409cfaa4 in vtable for KApplication () from /opt/kde3/lib/libkdecore.so.4
#80 0x08126ad8 in ?? ()
#81 0x0812e7d8 in ?? ()
#82 0x08126810 in ?? ()
#83 0x41188c88 in vtable for QCString () from /usr/lib/qt3/lib/libqt-mt.so.3
#84 0x0812db90 in ?? ()
#85 0xbffff0f0 in ?? ()
#86 0x081234b8 in ?? ()
#87 0x0808ce08 in ?? ()
#88 0x00000131 in ?? ()
#89 0x000000ff in ?? ()
#90 0x0807c300 in non-virtual thunk to QDragMoveEvent::~QDragMoveEvent() ()
#91 0x00000000 in ?? ()
#92 0x0812e450 in ?? ()
#93 0x08082001 in ?? ()
#94 0x0812ea20 in ?? ()
#95 0x08126568 in ?? ()
#96 0x00000001 in ?? ()
#97 0x40aefb84 in ?? () from /usr/lib/qt3/lib/libqt-mt.so.3
#98 0x08080bbc in ?? ()
#99 0x00000000 in ?? ()
#100 0x41529ec6 in on_exit () from /lib/tls/libc.so.6
#101 0x41514e80 in __libc_start_main () from /lib/tls/libc.so.6
#102 0x08056581 in ?? ()
Comment 1 G Narvaja 2005-07-20 01:43:05 UTC
Same results when using kcron 3.4.1 running in KDE 3.4.1 installed from binary packages in Debian.

Steps to reproduce:

1. Launch kcron
2. Expand "(System Crontab)" by clicking in the '+' sign.
3.a. Click in the PATH variable or
3.b. Click on the last task and go down with the arrow key

Thanks,
G
Comment 2 Kiril Simov 2005-08-28 11:46:01 UTC
Analogous problem with RedHat FC4 - you cannot click on the variable because kcron crashes. Please, help!

-Kiril
Comment 3 Jeremy Walker 2005-09-12 11:32:21 UTC
Confirmed on 3.4.0 on Ubuntu
Comment 4 A. Mosteo 2005-11-10 16:03:10 UTC
Confirmed on 3.4.3 on Kubuntu
Comment 5 Charles Thorpe 2005-11-17 00:13:13 UTC
Confirmed with 3.4.92 (svn from 12/11/05). qt-copy from same date.
Gentoo Linux, gcc 3.4.4

Backtrace, if its any use:

Using host libthread_db library "/lib/libthread_db.so.1".
`system-supplied DSO at 0xffffe000' has disappeared; keeping its symbols.
[Thread debugging using libthread_db enabled]
[New Thread -1228384592 (LWP 24631)]
[KCrash handler]
#4  0x080661e2 in KTView::slotSetCurrent ()
#5  0x08066408 in KTView::qt_invoke ()
#6  0xb72e2600 in QObject::activate_signal ()
   from /usr/qt/qt-copy/lib/libqt-mt.so.3
#7  0xb7572733 in QListView::selectionChanged ()
   from /usr/qt/qt-copy/lib/libqt-mt.so.3
#8  0xb7399132 in QListView::setCurrentItem ()
   from /usr/qt/qt-copy/lib/libqt-mt.so.3
#9  0xb739b11b in QListView::contentsMousePressEventEx ()
   from /usr/qt/qt-copy/lib/libqt-mt.so.3
#10 0xb739b5a6 in QListView::contentsMousePressEvent ()
   from /usr/qt/qt-copy/lib/libqt-mt.so.3
#11 0xb73b9af0 in QScrollView::viewportMousePressEvent ()
   from /usr/qt/qt-copy/lib/libqt-mt.so.3
#12 0xb73bb829 in QScrollView::eventFilter ()
   from /usr/qt/qt-copy/lib/libqt-mt.so.3
#13 0xb7394e14 in QListView::eventFilter ()
   from /usr/qt/qt-copy/lib/libqt-mt.so.3
#14 0xb72e0673 in QObject::activate_filters ()
   from /usr/qt/qt-copy/lib/libqt-mt.so.3
#15 0xb72e06d1 in QObject::event () from /usr/qt/qt-copy/lib/libqt-mt.so.3
#16 0xb730d075 in QWidget::event () from /usr/qt/qt-copy/lib/libqt-mt.so.3
#17 0xb72978a5 in QApplication::internalNotify ()
   from /usr/qt/qt-copy/lib/libqt-mt.so.3
#18 0xb7297c1b in QApplication::notify ()
   from /usr/qt/qt-copy/lib/libqt-mt.so.3
#19 0xb7808b5b in KApplication::notify () from /usr/kde/kde/lib/libkdecore.so.4
#20 0xb7249adb in QETWidget::translateMouseEvent ()
   from /usr/qt/qt-copy/lib/libqt-mt.so.3
#21 0xb7248834 in QApplication::x11ProcessEvent ()
   from /usr/qt/qt-copy/lib/libqt-mt.so.3
#22 0xb7256fc7 in QEventLoop::processEvents ()
   from /usr/qt/qt-copy/lib/libqt-mt.so.3
#23 0xb72a8340 in QEventLoop::enterLoop ()
   from /usr/qt/qt-copy/lib/libqt-mt.so.3
#24 0xb72a82a5 in QEventLoop::exec () from /usr/qt/qt-copy/lib/libqt-mt.so.3
#25 0xb7296d06 in QApplication::exec () from /usr/qt/qt-copy/lib/libqt-mt.so.3
#26 0x0807141a in main ()
Comment 6 Charles Thorpe 2005-12-12 01:27:44 UTC
Following patch fixes this for me.
Patch is against SVN revision 487774, 3.5 branch

Index: kcron/ktview.cpp
===================================================================
--- kcron/ktview.cpp    (revision4)
+++ kcron/ktview.cpp    (working copy)
@@ -537,7 +537,7 @@

       emit(enableModificationButtons(true));
       emit(enableRunNow(false));
-      emit(enableEnabled(currentCTTask->enabled));
+      emit(enableEnabled(currentCTVariable->enabled));

     }
     else if (parent->text(0) == KTListTasks::getDescription())
Comment 7 James Ots 2006-01-14 17:41:07 UTC
SVN commit 498051 by jamesots:

Patch from Charles Thorpe to fix bug 106853: crash after selecting
variable.

BUG: 106853


 M  +1 -1      ktview.cpp  


--- branches/KDE/3.5/kdeadmin/kcron/ktview.cpp #498050:498051
@@ -537,7 +537,7 @@
       
       emit(enableModificationButtons(true));
       emit(enableRunNow(false));
-      emit(enableEnabled(currentCTTask->enabled));
+      emit(enableEnabled(currentCTVariable->enabled));
 
     }
     else if (parent->text(0) == KTListTasks::getDescription())