Patch from Charles Thorpe to fix bug 106853: crash after selecting variable.

BUG: 106853

svn path=/branches/KDE/3.5/kdeadmin/kcron/; revision=498051